--- a/index.html
+++ b/index.html
@@ -235,14 +235,14 @@
     </section>
 
 
-    <div class="owl-carousel slider-two">
+    <!-- <div class="owl-carousel slider-two">
       <h1>Dean Winchester</h1>
       <h1>UX DESIGNER</h1>
       <h1>GOOGLE INC.</h1>
       <h1>2022</h1>
       <h1>LUCID</h1>
 
-    </div>
+    </div> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
